--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <title>React App</title>
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    />
     <style>
-        a { cursor: pointer; }
-        .help-block { font-size: 12px; }
+      a {
+        cursor: pointer;
+      }
+      .help-block {
+        font-size: 12px;
+      }
     </style>
   </head>
   <body>
