Change the name of package

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>DataBase Management Platform</title>
     <link
       rel="stylesheet"
       href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
