--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>DataBase Management Platform</title>
     <link
       rel="stylesheet"
-      href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
     <style>
       a {
